# supabase-rust-gen

./: .editorconfig  .env.example  .gitignore  .rustfmt.toml  Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs  output.rs
src/generate/: mod.rs  queries.rs  rls.rs  structs.rs
src/schema/: fetch.rs  mod.rs  parse.rs
src/types/: mapping.rs  mod.rs
tests/: integration.rs
